// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PokedexToggle > matches snapshot when active 1`] = `
<div>
  <button
    aria-label="Show all Pokémon"
    aria-pressed="true"
    class="flex items-center justify-center rounded-full aspect-square cursor-pointer transition-colors fixed bottom-6 right-6 w-16 h-16 md:w-20 md:h-20 bg-white shadow-lg border
      border-gray-200 hover:shadow-2xl transition-shadow
      focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-sky-600 focus-visible:ring-offset-2"
    type="button"
  >
    <img
      alt=""
      class="w-8 h-8 md:w-10 md:h-10"
      loading="lazy"
      src="/src/assets/planet.webp"
    />
  </button>
</div>
`;

exports[`PokedexToggle > matches snapshot when inactive 1`] = `
<div>
  <button
    aria-label="Show my Pokédex"
    aria-pressed="false"
    class="flex items-center justify-center rounded-full aspect-square cursor-pointer transition-colors fixed bottom-6 right-6 w-16 h-16 md:w-20 md:h-20 bg-white shadow-lg border
      border-gray-200 hover:shadow-2xl transition-shadow
      focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-sky-600 focus-visible:ring-offset-2"
    type="button"
  >
    <img
      alt=""
      class="w-8 h-8 md:w-10 md:h-10"
      loading="lazy"
      src="/src/assets/pokedex.svg"
    />
  </button>
</div>
`;
